--- a/TFMS/TFMS.Wpf/Separator.xaml
+++ b/TFMS/TFMS.Wpf/Separator.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TFMS.Wpf"
+             xmlns:converters="clr-namespace:TFMS.Wpf.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -12,7 +13,7 @@
                 <ResourceDictionary Source="Colors.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <local:HalfConverter x:Key="HalfConverter" />
+            <converters:HalfConverter x:Key="HalfConverter" />
 
             <Style x:Key="Separator" TargetType="{x:Type Rectangle}">
                 <Setter Property="Height" Value="{Binding Height, RelativeSource={RelativeSource AncestorType={x:Type local:Separator}}, Converter={StaticResource HalfConverter}}"/>
