--- a/TFMS/TFMS.Wpf/AircraftView.xaml
+++ b/TFMS/TFMS.Wpf/AircraftView.xaml
@@ -4,10 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TFMS.Wpf"
+             xmlns:converters="clr-namespace:TFMS.Wpf.Converters"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
-        <local:MinutesConverter x:Key="MinutesConverter"/>
+        <converters:MinutesConverter x:Key="MinutesConverter"/>
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
