--- a/TFMS/TFMS.Wpf/TFMSView.xaml
+++ b/TFMS/TFMS.Wpf/TFMSView.xaml
@@ -7,9 +7,12 @@
              xmlns:controls="clr-namespace:TFMS.Wpf.Controls"
              xmlns:converters="clr-namespace:TFMS.Wpf.Converters"
              mc:Ignorable="d"
-             d:Background="{x:Static local:Theme.BackgroundColor}"
+             Background="{x:Static local:Theme.BackgroundColor}"
              d:DesignHeight="800"
-             d:DesignWidth="600">
+             d:DesignWidth="800">
+    <UserControl.DataContext>
+        <local:TFMSViewModel />
+    </UserControl.DataContext>
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,65 +21,90 @@
 
             <converters:TotalSecondsConverter x:Key="TotalSecondsConverter"/>
 
-            <Style x:Key="TabBarButtons" TargetType="{x:Type Button}" BasedOn="{StaticResource ControlBaseStyle}">
-                <Setter Property="MinWidth" Value="50" />
-                <Setter Property="Margin" Value="0,0,2,0"/>
-            </Style>
+            <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBaseStyle}" />
 
         </ResourceDictionary>
     </UserControl.Resources>
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="16" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="42.267" />
+            <RowDefinition Height="5.733"/>
+            <RowDefinition Height="24" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="40" />
         </Grid.RowDefinitions>
 
-        <controls:BeveledBorder BevelType="Outline" BorderThickness="2" Margin="2">
-            <Grid Margin="1">
+        <!-- Unknown Buttons -->
+        <Grid Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
 
+            <Button Grid.Row="0"/>
+            <Button Grid.Row="1"/>
+        </Grid>
+
+        <!-- Header -->
+        <controls:BeveledBorder 
+            Grid.Column="1"
+            Grid.Row="0"
+            BevelType="Outline"
+            BorderThickness="{x:Static local:Theme.BeveledBorderThickness}"
+            Margin="1,1,1,1" Grid.RowSpan="2">
+
+            <Grid Margin="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="75" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="50" />
+                    <ColumnDefinition Width="72" />
                     <ColumnDefinition Width="6" />
-                    <ColumnDefinition Width="75" />
+                    <ColumnDefinition Width="56" />
+                    <ColumnDefinition Width="6" />
+                    <ColumnDefinition Width="72" />
                     <ColumnDefinition Width="6" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="6" />
-                    <ColumnDefinition Width="60" />
+                    <ColumnDefinition Width="72" />
                 </Grid.ColumnDefinitions>
 
                 <!-- Sector ID -->
                 <TextBlock
-                        Grid.Column="0"
-                        VerticalAlignment="Center"
-                        TextWrapping="Wrap"
-                        HorizontalAlignment="Center">
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    TextWrapping="Wrap"
+                    HorizontalAlignment="Center">
                         FLOW
                 </TextBlock>
 
-                <local:Separator Grid.Column="1" Width="2" Orientation="Horizontal"/>
+                <controls:BeveledLine Grid.Column="1" Width="{x:Static local:Theme.BeveledLineWidth}" Orientation="Vertical"/>
 
                 <!-- Aerodrome Selector -->
                 <ComboBox
-                        Grid.Column="2"
-                        Padding="5"
-                        ItemsSource="{Binding Path=AvailableAirports}"
-                        SelectedItem="{Binding Path=SelectedAirport}"
-                        DisplayMemberPath="Identifier"/>
+                    Grid.Column="2"
+                    Padding="5"
+                    ItemsSource="{Binding Path=AvailableAirports}"
+                    SelectedItem="{Binding Path=SelectedAirport}"
+                    DisplayMemberPath="Identifier" />
 
-                <local:Separator Grid.Column="3" Width="2" Orientation="Horizontal"/>
+                <controls:BeveledLine Grid.Column="3" Width="{x:Static local:Theme.BeveledLineWidth}" Orientation="Vertical"/>
 
                 <!-- Runway Selector -->
-                <ComboBox Grid.Column="4" Padding="5" ItemsSource="{Binding Path=AvailableRunwayModes}" SelectedItem="{Binding Path=SelectedRunwayMode}" DisplayMemberPath="Identifier"/>
+                <ComboBox
+                    Grid.Column="4"
+                    Padding="5"
+                    ItemsSource="{Binding Path=AvailableRunwayModes}"
+                    SelectedItem="{Binding Path=SelectedRunwayMode}"
+                    DisplayMemberPath="Identifier" />
 
-                <local:Separator Grid.Column="5" Width="2" Orientation="Horizontal"/>
+                <controls:BeveledLine Grid.Column="5" Width="{x:Static local:Theme.BeveledLineWidth}" Orientation="Vertical"/>
 
                 <!-- Runway Intervals -->
-                <local:BeveledBorderDecorator Grid.Column="6" BorderThickness="1" BevelType="Raised">
+                <controls:BeveledBorder Grid.Column="6" BorderThickness="{x:Static local:Theme.BeveledBorderThickness}" BevelType="Raised">
                     <ItemsControl ItemsSource="{Binding Path=RunwayRates}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
@@ -94,22 +122,30 @@
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
-                </local:BeveledBorderDecorator>
+                </controls:BeveledBorder>
 
-                <local:Separator Grid.Column="7" Width="2" Orientation="Horizontal"/>
+                <controls:BeveledLine
+                    Grid.Column="7"
+                    Width="{x:Static local:Theme.BeveledLineWidth}"
+                    Orientation="Vertical" />
 
                 <!-- Setup Button -->
-                <Button Grid.Column="8">
-                    <TextBlock>Setup</TextBlock>
-                </Button>
+                <Button Grid.Column="8" Content="SETUP" />
             </Grid>
 
         </controls:BeveledBorder>
 
         <!-- Tab Bar -->
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
+        <StackPanel 
+            Grid.Column="1"
+            Grid.Row="2"
+            Orientation="Horizontal"
+            Margin="1,1,1,1">
             <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource TabBarButtons}" />
+                <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonBaseStyle}">
+                    <Setter Property="MinWidth" Value="56" />
+                    <Setter Property="Margin" Value="0,0,2,0"/>
+                </Style>
             </StackPanel.Resources>
             <Button>
                 <TextBlock>DEPS</TextBlock>
@@ -136,55 +172,48 @@
             </Button>
         </StackPanel>
 
-        <!-- Ladder -->
-        <Grid Grid.Row="2">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="12" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+        <!-- Scroll Bar -->
+        <Grid Grid.Column="0" Grid.Row="3">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-                <!-- Scroll Buttons -->
-                <Grid Grid.Column="0">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-
-                    <Button Grid.Row="0" Margin="0,0,0,1">
-                        <Path 
-                            Fill="{x:Static local:Theme.InteractiveTextColor}"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Center"
-                            Data="M3,0 L6,6 L0,6 z"/>
-                    </Button>
-                    <Button Grid.Row="1" Margin="0,1,0,1"></Button>
-                    <Button Grid.Row="2" Margin="0,1,0,0">
-                        <Path 
-                            Fill="{x:Static local:Theme.InteractiveTextColor}"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Data="M3,6 L0,0 L6,0 z"/>
-                    </Button>
-                </Grid>
-
-                <!-- Ladder Canvas -->
-                <Canvas Grid.Column="1" Name="LadderCanvas" ClipToBounds="True"/>
-
-            </Grid>
+            <Button Grid.Row="0" Margin="0,0,0,1">
+                <Path 
+                    Fill="{x:Static local:Theme.InteractiveTextColor}"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    Data="M3,0 L6,6 L0,6 z"/>
+            </Button>
+            <Button Grid.Row="1" Margin="0,1,0,1"></Button>
+            <Button Grid.Row="2" Margin="0,1,0,0">
+                <Path 
+                Fill="{x:Static local:Theme.InteractiveTextColor}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Data="M3,6 L0,0 L6,0 z"/>
+            </Button>
         </Grid>
 
+        <!-- Ladder -->
+        <Canvas
+            Grid.Column="1"
+            Grid.Row="3"
+            Name="LadderCanvas" 
+            Margin="1,1,1,1"
+            ClipToBounds="True" />
+
         <!-- Footer -->
-        <Grid Grid.Row="3">
+        <Grid Grid.Column="1"  Grid.Row="4">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="104"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
             </Grid>
-
 
             <ItemsControl Grid.Column="0" ItemsSource="{Binding Path=LeftFeederFixes}">
                 <ItemsControl.ItemsPanel>
@@ -199,9 +228,9 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
 
-            <Grid Grid.Column="1">
+            <controls:BeveledBorder Grid.Column="1" BevelType="Outline" BorderThickness="{x:Static local:Theme.BeveledBorderThickness}">
                 <TextBlock x:Name="ClockText"/>
-            </Grid>
+            </controls:BeveledBorder>
 
             <ItemsControl Grid.Column="2" ItemsSource="{Binding Path=RightFeederFixes}">
                 <ItemsControl.ItemsPanel>
